# photo-organizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  pylint.yml
config/: organizer_sample.yaml
design/stitch/configuration/: code.html
design/stitch/home/: code.html
design/stitch/installation/: code.html
design/stitch/usage/: DESIGN.md  code.html
docs/: _config.yml  changelog.md  configuration.md  examples.md  index.md  installation.md  limitations.md  roadmap.md  usage.md  versioning.md
docs/_includes/: sidebar.html  topnav.html
docs/_layouts/: default.html
docs/assets/css/: style.css
src/photo_organizer/: __init__.py  __main__.py  cli.py  config.py  constants.py  correction_manifest.py  executor.py  geocoding.py  gui.py  hashing.py  heif_backend.py  journal.py  logging_config.py  metadata.py  naming.py  planner.py  preview.py  raw_backend.py  scanner.py  text_normalization.py
src/photo_organizer/gui/: __init__.py  app.py  logging_bridge.py  main_window.py  session.py  theme.py  windowing.py
src/photo_organizer/gui/adapters/: __init__.py  organizer.py
src/photo_organizer/gui/design/main/: DESIGN.md  code.html
src/photo_organizer/gui/pages/: __init__.py  dashboard_page.py  organize_page.py  placeholder_page.py
src/photo_organizer/gui/widgets/: __init__.py  log_console.py  metric_card.py  path_picker.py  scroll_area.py
src/photo_organizer/gui/workers/: __init__.py  task_worker.py
tests/: test_cli.py  test_config.py  test_correction_manifest.py  test_executor.py  test_geocoding.py  test_gui_app.py  test_hashing.py  test_heic_corpus.py  test_heif_backend.py  test_import.py  test_integration.py  test_journal.py  test_logging_config.py  test_metadata.py  test_metadata_corpus.py  test_naming.py  test_planner.py  test_preview.py  test_raw_corpus.py  test_scanner.py  test_text_normalization.py
tests/fixtures/: README.md  heic_corpus.py  metadata_corpus.py  raw_corpus.py
