[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-organizer"
version = "0.2.0"
description = "CLI tool to organize photos by metadata and date."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "photo-organizer contributors" }]
dependencies = ["Pillow>=10.0"]

[project.urls]
Repository = "https://github.com/iklav-tech/photo-organizer"
Issues = "https://github.com/iklav-tech/photo-organizer/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
photo-organizer = "photo_organizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
