[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-organizer"
version = "0.8.0"
description = "CLI tool to organize photos by metadata and date."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "photo-organizer contributors" }]
dependencies = ["Pillow>=10.0", "PyYAML>=6.0", "pillow-heif>=0.16.0"]

[project.urls]
Repository = "https://github.com/iklav-tech/photo-organizer"
Issues = "https://github.com/iklav-tech/photo-organizer/issues"

[project.optional-dependencies]
dev = ["pylint>=3.0", "pytest>=8.0"]

[project.scripts]
photo-organizer = "photo_organizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.main]
fail-under = 8.0
