[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-organizer"
version = "1.1.0"
description = "CLI tool to organize photos by metadata and date."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "photo-organizer contributors" }]
license = { file = "LICENSE" }
keywords = ["photos", "metadata", "exif", "heic", "raw", "cli", "organization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
dependencies = ["Pillow>=10.0", "PySide6>=6.6", "PyYAML>=6.0", "pillow-heif>=0.16.0"]

[project.urls]
Repository = "https://github.com/iklav-tech/photo-organizer"
Issues = "https://github.com/iklav-tech/photo-organizer/issues"
Documentation = "https://iklav-tech.github.io/photo-organizer/"
Changelog = "https://github.com/iklav-tech/photo-organizer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pylint>=3.0", "pytest>=8.0"]
gui = ["PySide6>=6.6"]

[project.scripts]
photo-organizer = "photo_organizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.main]
fail-under = 8.0
